dom & type casting

--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
 					<label>Amount (£):</label>
 					<input type="number" id="amount" />
 				</div>
-				<button>Add</button>
+				<button type="submit">Add</button>
 			</form>
 
 			<a href="https://www.ruingwe.com">Ruingwe</a>
 		</footer>
 
-		<script src="sandbox.js"></script>
+		<script src="./app.js"></script>
 	</body>
 </html>
