--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,6 @@
 			<a href="https://www.ruingwe.com">Ruingwe</a>
 		</footer>
 
-		<script src="./app.js"></script>
+		<script type="module" src="./app.js"></script>
 	</body>
 </html>
